--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -38,6 +38,7 @@
 @import "./components/site-footer";
 @import "./components/site-header";
 @import "./components/nav-bar";
+@import "./components/theme-toggle-button";
 @import "./components/community-rank-tag";
 @import "./components/track-breadcrumbs";
 @import "./components/contributing/header";
