Update mentoring article
Update margin

Add conditional

--- a/app/views/tracks/show/_mentoring_article.html.haml
+++ b/app/views/tracks/show/_mentoring_article.html.haml
@@ -35,6 +35,11 @@
             .next-slot
               Next slot unlocks at
               %strong #{number_with_delimiter user_track.repo_for_next_mentoring_slot} rep
+        - unless current_user.premium?
+          .flex.items-center.leading-160.mt-8
+            Sign up to&nbsp;
+            = link_to 'Premium', premium_index_path, class: 'text-prominentLinkColor font-semibold'
+            &nbsp;to unlock all mentoring slots
 
   .lg-container.container
     .slots
