--- a/app/views/premium/index.html.haml
+++ b/app/views/premium/index.html.haml
@@ -3,12 +3,12 @@
     .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
       .top-lhs
         %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
-          Exercism Insiders
+          Exercism Premium
           = graphical_icon "insiders", css_class: 'h-[32px] md:h-[64px] w-[32px] md:w-[64px]'
         %p.text-p-xlarge.mb-24
-          Welcome to Insiders! Thanks for being part of our journey.
+          Welcome to Premium! Thanks for being part of our journey.
         %p.text-p-large.mb-8
-          You're joining us at the start of our Insiders story and things will be evolving rapidly over the coming months.
+          You're joining us at the start of our Premium story and things will be evolving rapidly over the coming months.
           Check below for the features that have become enabled for you and watch the video on the right for a bit of an overview.
         %p.text-p-large.mb-8
           In the coming weeks we're going to be adding Exercism Premium (which you'll get for free), exclusive Perks from partners (once we get a few of them finalised), and some exclusive content just for you too.
@@ -18,7 +18,7 @@
         .c-youtube-container
           %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/WDUqfCMbh_8", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
-    %h2.text-h2.mb-32 Your Insider Features
+    %h2.text-h2.mb-32 Your Premium Features
     .features
       .feature
         = graphical_icon :moon, css_class: "filter-yellowPrompt"
@@ -35,7 +35,7 @@
         %h4 Name tag flair &amp; Badges
         %p
           You'll now see a shiny little
-          = icon "insiders", "purple heart icon signifying Insiders", style: "all:unset;display:inline;width:20px;height:20px"
+          = icon "insiders", "purple heart icon signifying Premium", style: "all:unset;display:inline;width:20px;height:20px"
           next to your name around the site and a new tag on your #{link_to 'your public profile', profile_path(current_user.handle)}.
           You should also have a new very exclusive badge (or two!).
 
@@ -43,17 +43,17 @@
       .feature
         = graphical_icon :'feature-youtube', css_class: "filter-yellowPrompt"
         %h4 Exclusive content
-        %p Keep up to date with what we're planning and building with private Insiders livestreams, vlogs, and technical deep dives. Check out the first video at the top of this page.
+        %p Keep up to date with what we're planning and building with private Premium livestreams, vlogs, and technical deep dives. Check out the first video at the top of this page.
 
       .feature
         = graphical_icon :'feature-discord', css_class: "filter-yellowPrompt"
         %h4 Private Discord channel
-        %p You should now have access to an exclusive #{link_to '#insiders channel on Discord', 'https://discord.com/channels/854117591135027261/1103737555490447460'} where you can hang out with me and other staff and Insiders. Check the #{link_to 'integrations page', integrations_settings_path} if you don't see it.
+        %p You should now have access to an exclusive #{link_to '#insiders channel on Discord', 'https://discord.com/channels/854117591135027261/1103737555490447460'} where you can hang out with me and other staff and Premium. Check the #{link_to 'integrations page', integrations_settings_path} if you don't see it.
 
       .feature
         = graphical_icon :megaphone, css_class: "filter-yellowPrompt"
         %h4 Contribute on community calls
-        %p Our community calls are watchable by anyone, but only Insiders join in the conversation. Jump on stage and make your voice heard. Check Events on #{link_to 'Discord', 'https://exercism.org/r/discord'} for the next call.
+        %p Our community calls are watchable by anyone, but only Premium join in the conversation. Jump on stage and make your voice heard. Check Events on #{link_to 'Discord', 'https://exercism.org/r/discord'} for the next call.
 
 
 
