--- a/app/views/premium/external.html.haml
+++ b/app/views/premium/external.html.haml
@@ -3,19 +3,17 @@
     .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
       .top-lhs
         %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
-          Exercism Insiders
+          Exercism Premium
           = graphical_icon "insiders", css_class: 'h-[32px] md:h-[64px] w-[32px] md:w-[64px]'
         %h3.text-h3.mb-16 Our way of saying thank you.
         %h5.launching Launching May 4th 2023
         %p.text-p-xlarge.mb-24 Get behind the scenes access, Dark Mode, ChatGPT integration, offers from our partners, exclusive badges, and more.
-        - if current_user.present?
-          = render ReactComponents::Insiders::InsidersStatus.new
 
       .top-rhs
         .c-youtube-container
           %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/8onnSv5r9Hw", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
-    %h2.text-h2.mb-32 Exclusive Insider Features
+    %h2.text-h2.mb-32 Exclusive Premium Features
     .features
       - @features.each do |feature|
         .feature
@@ -51,12 +49,16 @@
               %h4= partner[:name]
               %p= partner[:offer]
 
+  .lg-container.text-center.flex.flex-col
+    %h2.text-h1.mb-16.relative Price options
+    = render ReactComponents::Premium::PriceOptions.new
+
   .gradient-container.faqs
     .lg-container
       %h2.text-h1.mb-40 The Nitty Gritty &amp; FAQs
       .flex.flex-col.gap-24.mx-auto{ class: "max-w-[940px]" }
         %details{ open: true }
-          %summary What are the exact criteria for Insiders access?
+          %summary What are the exact criteria for Premium access?
           %p.mb-12
             You can check the exact algorithm #{link_to 'in our codebase', 'https://github.com/exercism/website/tree/main/app/commands/user/insiders_status/determine_eligibility_status.rb'} but it's also reproduced here.
           %p.mb-4 To gain lifetime access you need one of the following:
@@ -64,7 +66,7 @@
             %li To be a founder or staff member
             %li To be a supermentor (100+ solutions mentored on a track with a 95% positive rating)
             %li To have a reputation equal or greater than 1,000
-            %li To have donated $500 before Insiders launches
+            %li To have donated $500 before Premium launches
 
           %p.mb-4 For those without lifetime access, to gain access you need one of the following:
           %ul.mb-16
@@ -79,29 +81,29 @@
         %details
           %summary I've donated via Paypal or GitHub Sponsors but don't have access.
           Due to technical limitations, we don't automatically get notified of recurring donors on PayPal or GitHub Sponsors.
-          We manually sync these each day, so there may be a delay between you setting up your donation and gaining Insiders access.
+          We manually sync these each day, so there may be a delay between you setting up your donation and gaining Premium access.
           Sorry for this - we're working on improving it before launch.
           Be assured that if you've setup a recurring donation, we'll give you access!
 
         %details
-          %summary What does Insiders cost?
-          Insiders isn't a product that you can buy - it's a rewards program for those who contribute, mentor or donate.
+          %summary What does Premium cost?
+          Premium isn't a product that you can buy - it's a rewards program for those who contribute, mentor or donate.
           If you'd like access, you can start contributing, mentoring, or set up a recurring donation to Exercism and then join us on our journey.
 
         %details
-          %summary What features will Exercism Insiders contain?
-          At launch, we're releasing our Dark Mode and ChatGPT integrations exclusively to Insiders.
-          Over time, we're plan on adding other fun features to Insiders.
+          %summary What features will Exercism Premium contain?
+          At launch, we're releasing our Dark Mode and ChatGPT integrations exclusively to Premium.
+          Over time, we're plan on adding other fun features to Premium.
 
         %details
-          %summary I need dark theme for accessiblity reasons, but I'm not an Insider.
-          We're creating a basic dark theme that's suitable for people who struggle with light themes, which will launch at the same time as Insiders.
+          %summary I need dark theme for accessiblity reasons, but I'm not an Premium.
+          We're creating a basic dark theme that's suitable for people who struggle with light themes, which will launch at the same time as Premium.
           It's not that pretty, but it'll mean you can use the site without issue!
 
         %details
           %summary How do I earn reputation?
           Reputation is earned by mentoring or contributing to Exercism.
-          You can also earn reputation by publishing your solutions, but that does not count towards Insiders access.
+          You can also earn reputation by publishing your solutions, but that does not count towards Premium access.
           You can check what actions result in what reputation by consulting #{link_to 'our docs', 'https://exercism.org/docs/using/product/reputation#h-acquisition-of-reputation'}.
           Check your #{link_to 'journey page', journey_path} to see where you're earning reputation.
 
@@ -109,5 +111,5 @@
           %summary I thought Exercism was free?
           It is! You don't have to donate in order to use Exercism.
           All our production-ready educational features are entirely free.
-          However, for those that are able and willing to support Exercism with their time or money, Insiders provides a way of us saying thank you, and taking them on our journey with us.
+          However, for those that are able and willing to support Exercism with their time or money, Premium provides a way of us saying thank you, and taking them on our journey with us.
 
