--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -166,6 +166,7 @@
 @import "./modals/change-published-iteration";
 @import "./modals/unpublish-solution";
 @import "./modals/cli-walkthrough";
+@import "./modals/premium-stripe-form";
 
 @import "./dropdowns/generic-menu";
 @import "./dropdowns/share";
@@ -177,6 +178,7 @@
 @import "./pages/partners/gdn";
 @import "./pages/about";
 @import "./pages/insiders";
+@import "./pages/premium";
 @import "./pages/hiring";
 @import "./pages/team";
 @import "./pages/individual_supporters";
