--- a/app/css/ui-kit/borders.css
+++ b/app/css/ui-kit/borders.css
@@ -11,6 +11,18 @@
         background-origin: border-box;
         background-clip: padding-box, border-box;
     }
+    .border-gradient-russianViolet {
+        border-style: solid;
+        border-color: transparent;
+        /* TODO: decide its lighttheme color. it was white, now it is FAFAFF */
+        background-image: linear-gradient(
+                theme(colors.russianViolet),
+                theme(colors.russianViolet)
+            ),
+            linear-gradient(#2200ff, #9e00ff);
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
+    }
     .border-gradient-primary {
         border-style: solid;
         border-color: transparent;
