--- a/app/css/components/nav-bar.css
+++ b/app/css/components/nav-bar.css
@@ -8,8 +8,8 @@
             @apply p-24;
         }
 
-        span,
-        a {
+        .nav-element-link,
+        .nav-element-label {
             &:hover + .nav-element-dropdown,
             &:focus-within + .nav-element-dropdown {
                 ul li {
@@ -25,6 +25,7 @@
                 }
             }
         }
+
         &:hover,
         &:focus-within {
             .nav-element-dropdown,
