--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -235,17 +235,23 @@ body.namespace-.controller-insiders {
             }
         }
 
-        a,
-        .nav-element {
-            @apply flex items-center relative;
-            @apply text-16 text-textColor6 font-semibold;
+        .nav-element-link {
             @apply whitespace-nowrap;
-            @apply cursor-pointer;
 
             & .c-icon {
                 height: 16px;
                 width: 16px;
             }
+        }
+
+        .nav-element-label {
+            @apply cursor-pointer;
+        }
+
+        .nav-element-label,
+        .nav-element-link {
+            @apply text-16 text-textColor6 font-semibold;
+            @apply flex items-center relative;
         }
     }
 
