Add new site nav (#5457)
* Couple experimentations

* More experimentation

* Moore experimenting

* Handle focus

* Refactor

* Add tiny animation

* Handle overflows

* export focus handler

* Add toggle button

* Sync theme switches

* Add tooltip over theme-toggle button

* Add link on tooltip - WIP

* Add color to link

* Fix accessibility issues

* Experiment with keyboard focus - WIP

* Fix keyboard focus accessibility

* Handle no-view menus

* Use kwarg for submenu too

* Autofocus first element if item is not a link

* Disable firstLink focusing for now

* Rename content to view to match other places, add margin to toggle button

* Refactor theme observer

* Make observer slightly more efficient

* Avoid calling matchMedia too frequently

* Git refactor our some complexity

* Refactor each nav view into its own template

* Fix bug with clipping

* Fix issue with glitchy hovers

* Fix menu issue

* Slightly refactor hover pseudo fields

* Menu enhancements, WIP adding only view for premium

* Tweak css for premium

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -18,6 +18,11 @@ body:not(.namespace-.controller-insiders):not(.namespace-.controller-premium) {
     --exercism-link-filter: var(--textColor1-filter);
 }
 
+body.keyboard-navigation .nav-element:hover .nav-element-dropdown,
+body.keyboard-navigation .nav-element:hover .arrow {
+    display: none !important;
+}
+
 body.namespace-.controller-insiders,
 body.namespace-.controller-premium {
     #site-header {
@@ -230,35 +235,14 @@ body.namespace-.controller-premium {
                 }
             }
         }
-
-        & li:last-child a {
-            color: var(--textColorLastNavElement);
-
-            & .c-icon {
-                filter: var(--purple-filter);
-            }
-        }
-
-        & a {
-            @apply flex items-center relative;
-            @apply text-16 text-textColor6 font-semibold;
-            @apply whitespace-nowrap;
-
-            & .c-icon {
-                height: 16px;
-                width: 16px;
-            }
-        }
     }
+
     & nav.signed-in {
         @apply flex-grow;
 
-        & li {
-            @apply mr-16;
-        }
-        & a {
+        /* & a {
             @apply px-8 py-8;
-        }
+        } */
     }
 
     & nav.signed-out {
