--- a/app/css/pages/dashboard.css
+++ b/app/css/pages/dashboard.css
@@ -244,6 +244,10 @@
         @apply text-center;
         @apply mb-24;
 
+        @media (forced-colors: active) {
+            border: 3px ButtonText dashed;
+        }
+
         & .c-icon {
             width: 96px;
             height: 96px;
