--- a/app/views/premium/index.html.haml
+++ b/app/views/premium/index.html.haml
@@ -1,4 +1,5 @@
 #page-premium
+  = render ReactComponents::Modals::WelcomePremiumModal.new
   .lg-container
     .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
       .top-lhs
