--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -392,6 +392,8 @@
     --c-concept-map-line-faded: #d2ddf3;
 }
 
+body.namespace-.controller-insiders.theme-light,
+body.namespace-.controller-premium.theme-light,
 .theme-dark {
     color-scheme: dark;
 
