Use question mark for current_active_subscription calls

--- a/app/views/admin/users/search.html.haml
+++ b/app/views/admin/users/search.html.haml
@@ -18,7 +18,7 @@
       .text-h6.mb-8 Joined At: #{@user.created_at}
       .text-h6.mb-8 Last Visited On: #{@user.last_visited_on}
       .text-h6.mb-8 Total Donated (in cents): #{@user.total_donated_in_cents}
-      .text-h6.mb-8 Active Donation Subscription: #{@user.active_donation_subscription}
+      .text-h6.mb-8 Active Donation Subscription: #{@user.active_donation_subscription?}
       - if @user.disabled?
         .text-h6.mb-8.text-danger Disabled At: #{@user.disabled_at}
     - elsif @searched
